[package]
name = "ruste"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.10.6"

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "step2_eval.rs"

[[bin]]
name = "step3_env"
path = "step3_env.rs"

[[bin]]
name = "step4_if_fn_do"
path = "step4_if_fn_do.rs"

# [[bin]]
# name = "step5_tco"
# path = "step5_tco.rs"

# [[bin]]
# name = "step6_file"
# path = "step6_file.rs"

# [[bin]]
# name = "step7_quote"
# path = "step7_quote.rs"

# [[bin]]
# name = "step8_macros"
# path = "step8_macros.rs"

# [[bin]]
# name = "step9_try"
# path = "step9_try.rs"

# [[bin]]
# name = "stepA_mal"
# path = "stepA_mal.rs"
